[package]
name = "dlmm-vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dlmm_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
devnet = []
mainnet = []

[dependencies]
anchor-spl = "0.31.0"
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
bytemuck = { version = "1.13.1", features = ["derive", "min_const_generics"] }
anyhow = "1.0.100"


[dev-dependencies]
solana-program-test = "2.3.0"
solana-sdk = "2.3.0"
assert_matches = "1.5.0"
solana-client = "2.3.0"
spl-token = { version = "8.0.0", default-features = false, features = ["no-entrypoint"] }
solana-account-decoder = "2.3.0"
bincode = "1.3.3"
spl-associated-token-account = { version = "7.0.0", default-features = false, features = ["no-entrypoint"] }
lazy_static = "1.5.0"
serde_json = "1.0.145"
base64 = "0.22.1"
litesvm = "0.8.0"
solana-pubkey = "3.0.0"
solana-keypair = "3.0.1"
solana-account = "3.0.0"
solana-message = "3.0.1"
solana-transaction = "3.0.1"
solana-instruction = "3.0.0"
jup-swap = { git = "https://github.com/jup-ag/jupiter-swap-api-client", package = 'jupiter-swap-api-client', branch = '2.1' }
solana-compute-budget = "3.0.6"
