[package]
name = "dlmm-vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]
name = "dlmm_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
devnet = []

[dependencies]
anchor-spl = "0.31.0"
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
bytemuck = { version = "1.13.1", features = ["derive", "min_const_generics"] }
anyhow = "1.0.100"


[dev-dependencies]
solana-program-test = "2.1.*"
solana-sdk = "2.1.*"
assert_matches = "1.5.0"
solana-client = "2.1.*"
solana-account-decoder = "2.1.*"
bincode = "1.3.3"
spl-associated-token-account = "6.0.0"
lazy_static = "1.5.0"
