[package]
name = "dlmm-vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]
name = "dlmm_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
devnet = []

[dependencies]
anchor-spl = "0.31.0"
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
bytemuck = { version = "1.13.1", features = ["derive", "min_const_generics"] }
anyhow = "1.0.100"


[dev-dependencies]
solana-program-test = "2.3.0"
solana-sdk = "2.3.0"
assert_matches = "1.5.0"
solana-client = "2.3.0"
spl-token = { version = "8.0.0", default-features = false, features = ["no-entrypoint"] }
solana-account-decoder = "2.3.0"
bincode = "1.3.3"
spl-associated-token-account = { version = "7.0.0", default-features = false, features = ["no-entrypoint"] }
lazy_static = "1.5.0"
serde_json = "1.0.145"
base64 = "0.22.1"
